--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section id="hero">
             <div id="particles-js"></div>
             <div class="container hero-content">
-                <h2>English Club SPENAM</h2>
+                <h2>English Club</h2>
                 <p>Learning English is fun, interactive, and motivating.</p>
                 <a href="#registration" class="form-button">Join Now</a>
             </div>
