--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
     <footer>
         <div class="footer-content">
-            <p><strong>English Club SPENAM</strong> - SMPN 6 Cirebon</p>
+            <p><strong>English Club</strong> - SMPN 6 Cirebon</p>
             <div class="social-links">
                 <a href="#"><i class="fab fa-instagram"></i></a>
                 <a href="#"><i class="fab fa-whatsapp"></i></a>
